--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -9,9 +9,15 @@
     <h2>Computer Choice: <span id="computer-choice"></span></h2>
     <h2>Your Choice: <span id="your-choice"></span></h2>
     <h2>Result: <span id="result"></span></h2>
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissor">scissor</button>
+    <div class="button__container">
+        <button id="rock" class="button">Rock</button>
+        <button id="Paper" class="button">Paper</button>
+        <button id="Scissor" class="button">Scissor</button>
+    </div>
+
+    <button id="Confirm">Confirm</button>
+
+
     <script src="script.js"></script>
 </body>
 </html>
