--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Papers, Scissors</title>
-</head>
-<body>
-    <h2>Computer Choice: <span id="computer-choice"></span></h2>
-    <h2>Your Choice: <span id="your-choice"></span></h2>
-    <h2>Result: <span id="result"></span></h2>
-    <div class="button__container">
-        <button id="rock" class="button">Rock</button>
-        <button id="Paper" class="button">Paper</button>
-        <button id="Scissor" class="button">Scissor</button>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <section class="userSection">
+        <h2>Your Choice:</h2>
+
+        <div class="userChoice__img">
+          <span id="your-choice"></span>
+        </div>
+
+        <div class="buttonsSection">
+          <div class="button__container">
+            <button id="Rock" class="button">Rock</button>
+            <button id="Paper" class="button">Paper</button>
+            <button id="Scissor" class="button">Scissor</button>
+          </div>
+          <button id="Confirm">CONFIRM</button>
+        </div>
+      </section>
+      <section class="computerSection">
+        <h2>Computer Choice: <span id="computer-choice"></span></h2>
+
+        <div class="userChoice__img">
+            <span id="computer-choice"></span>
+          </div>
+  
+          <div class="buttonsSection">
+            <div class="button__container">
+              <button class="button">Rock</button>
+              <button class="button">Paper</button>
+              <button class="button">Scissor</button>
+            </div>
+          </div>
+      </section>
+
+      <div class="result">
+        <span id="result"></span>
+      </div>
     </div>
 
-    <button id="Confirm">Confirm</button>
-
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
